Fixed font-size on small displays

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -420,3 +420,12 @@ input:focus {
         flex-direction: column;
     }
 }
+
+@media screen and (max-width: 700px) {
+    .name {
+        font-size: 48px;
+    }
+    .title-content h2 {
+        font-size: 18px;
+    }
+}
